[resultsdbpy] Top of commit tooltip cut off on 1 test loaded with few configurations https://bugs.webkit.org/show_bug.cgi?id=269520
Reviewed by NOBODY (OOPS!).

Make sure to tooltip have bigger z-index then header

* Tools/Scripts/libraries/resultsdbpy/resultsdbpy/view/static/css/tooltip.css:
(.tooltip-content):
* Tools/Scripts/libraries/resultsdbpy/resultsdbpy/view/static/library/css/webkit.css:
(:root):
(.header.fixed,.topbar.fixed):

--- a/Tools/Scripts/libraries/resultsdbpy/resultsdbpy/view/static/css/tooltip.css
+++ b/Tools/Scripts/libraries/resultsdbpy/resultsdbpy/view/static/css/tooltip.css
@@ -54,7 +54,7 @@
 }
 
 .tooltip-content {
-    z-index: var(--middleZIndex);
+    z-index: calc(var(--maxZIndex) + 1);
     position: absolute;
     -webkit-backdrop-filter: blur(10px) brightness(88%);
     backdrop-filter: blur(10px) brightness(88%);
